--- a/WarOfShogunateDemo/WarOfShogunateDemo/Base.lproj/Main.storyboard
+++ b/WarOfShogunateDemo/WarOfShogunateDemo/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Xfy-tn-7O0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3qx-Lj-idg"/>
                             <constraint firstItem="Xfy-tn-7O0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="40D-ST-2pZ"/>
